# mulsi

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: roadmap.md
.github/workflows/: ci.yml  disp-semantic-release.yml  dry-semantic-release.yml  pr-semantic-release.yml  publish.yml  semantic-release.yml
assets/: .gitignore  resolve-test-assets.sh
demo/: main.py
scripts/: auto_labeling_using_llm.py  clip_reading.py  constants.py  contrast_reading.py  logistic_regression_clf.py  make_activation_dataset.py  make_clf_dataset.py  make_pooler_dataset.py  pre_labeling_dataset.py  random_probing.py  simple_fgsm.py  train_clf.py  train_clip_clf.py  train_concept_probe.py  train_lr_clf.py
scripts/analysis/: fgsm_probing_test.py  probes_analysis.py  probes_mixed_checks.py  probes_sanity_checks.py
scripts/utils/: clf.py  dataset.py  viz.py
src/mulsi/: __init__.py  adversarial.py  analysis.py  attack.py  clf.py  hook.py  model.py  preprocess.py  probe.py  processor.py  reader.py  representation.py  wrapper.py
src/mulsi/attacks/: __init__.py  fgsm.py
src/mulsi/readers/: __init__.py  contrast.py
tests/: conftest.py
tests/unit/: test_adversarial.py  test_attack.py  test_clf.py  test_hook.py  test_processor.py  test_reader.py  test_representation.py
tests/unit/attacks/: test_fgsm.py
