[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["src", "tests", "scripts", "docs", "demo"]

[tool.poetry]
name = "mulsi"
version = "0.1.2"
description = "Safe inference using representation engineering."
readme = "README.md"
license = "MIT"
authors = [
    "Yoann Poupart <yoann.poupart@ens-lyon.org>",
    "Imene Kerboua <imene.kerboua@esker.com>",
]

[[tool.poetry.source]]
name = "PyPI"
priority = "default"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.2"
transformers = "^4.37.2"
tensordict = "^0.3.0"
typeguard = "^4.1.5"
einops = "^0.7.0"
torchvision = "^0.17.0"
datasets = {version = "^2.18.0", extras = ["scripts"]}
wandb = {version = "^0.16.5", extras = ["scripts"]}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
gdown = "^5.1.0"

[tool.poetry.group.demo]
optional = true

[tool.poetry.group.demo.dependencies]
gradio = {extras = ["oauth"], version = "^4.24.0"}
jsonlines = "^4.0.0"

[tool.poetry.group.scripts]
optional = true

[tool.poetry.group.scripts.dependencies]
datasets = "^2.18.0"
wandb = "^0.16.5"
